--- a/app/app/src/main/res/layout/activity_main.xml
+++ b/app/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,44 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     android:layout_margin="20dp"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context="com.example.app.MainActivity">
 
     <Button
         android:id="@+id/connect_to_car"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
+        android:layout_width="182dp"
+        android:layout_height="81dp"
+        android:layout_marginStart="94dp"
+        android:layout_marginBottom="272dp"
         android:text="@string/connect_to_car"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        tools:ignore="MissingConstraints">
-    </Button>
+        app:layout_constraintStart_toStartOf="parent"/>
 
+    <Button
+        android:id="@+id/help_button"
+        android:layout_width="146dp"
+        android:layout_height="63dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/help"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="Help"/>
 
-
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="192dp"
+        android:layout_height="51dp"
+        android:layout_marginStart="91dp"
+        android:layout_marginTop="75dp"
+        android:clickable="false"
+        android:text="@string/smartcar_app"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
