Implemented BT communication Car should receive byte commands via BT Updated xml to show 'Automatic' when toggled on.
Co-authored-by: Hjalmar Thunberg <hjalmar.thunberg@gmail.com>

--- a/app/app/src/main/res/layout/activity_connect.xml
+++ b/app/app/src/main/res/layout/activity_connect.xml
@@ -36,7 +36,7 @@
         android:checked="false"
         android:text="@string/manual"
         android:textOff="@string/manual"
-        android:textOn="@string/manual"
+        android:textOn="@string/automatic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
