Resolve failing Travis issue
Added the file that was missing for the Travis check to go through.

--- a/app/app/src/main/res/layout/activity_connect.xml
+++ b/app/app/src/main/res/layout/activity_connect.xml
@@ -11,6 +11,7 @@
         android:layout_width="356dp"
         android:layout_height="74dp"
         android:clickable="false"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/control_the_car"
         android:textColor="#000000"
         android:textSize="30sp"
